Add project tab with chapter editor

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectWork.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/_ProjectWork.cshtml
@@ -6,6 +6,7 @@
     <ul class="nav nav-tabs" role="tablist" id="project-work-tabs">
         <li role="presentation" class="active"><a href="#project-work-publications" aria-controls="project-work-publications" role="tab">@Localizer.Translate("Publication", "Admin")</a></li>
         <li role="presentation"><a href="#project-work-page-list" aria-controls="project-work-page-list" role="tab">@Localizer.Translate("PageList", "Admin")</a></li>
+        <li role="presentation"><a href="#project-work-chapter-editor" aria-controls="project-work-chapter-editor" role="tab">@Localizer.Translate("Chapters", "Admin")</a></li>
         <li role="presentation"><a href="#project-work-cooperation" aria-controls="project-work-cooperation" role="tab">@Localizer.Translate("Cooperation", "Admin")</a></li>
         <li role="presentation"><a href="#project-work-metadata" aria-controls="project-work-metadata" role="tab">@Localizer.Translate("Metadata", "Admin")</a></li>
         <li role="presentation"><a href="#project-work-categorization" aria-controls="project-work-categorization" role="tab">@Localizer.Translate("Categorization", "Admin")</a></li>
@@ -17,6 +18,7 @@
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="project-work-publications" data-panel-type="@Html.Raw((int)ProjectModuleTabType.WorkPublications)"></div>
         <div role="tabpanel" class="tab-pane" id="project-work-page-list" data-panel-type="@Html.Raw((int)ProjectModuleTabType.WorkPageList)"></div>
+        <div role="tabpanel" class="tab-pane" id="project-work-chapter-editor" data-panel-type="@Html.Raw((int)ProjectModuleTabType.WorkChapters)"></div>
         <div role="tabpanel" class="tab-pane" id="project-work-cooperation" data-panel-type="@Html.Raw((int)ProjectModuleTabType.WorkCooperation)"></div>
         <div role="tabpanel" class="tab-pane" id="project-work-metadata" data-panel-type="@Html.Raw((int)ProjectModuleTabType.WorkMetadata)"></div>
         <div role="tabpanel" class="tab-pane" id="project-work-categorization" data-panel-type="@Html.Raw((int)ProjectModuleTabType.WorkCategorization)"></div>
