--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -17,8 +17,8 @@
     <link asp-append-version="true" rel="stylesheet" href="~/lib/gijgo/dist/modular/css/tree.min.css" />
 }
 @section scripts {
-    <script asp-append-version="true" src="~/Areas/Admin/js/chapter-editor/ridics.project.chapter-editor.main.js"></script>
     <script asp-append-version="true" src="~/Areas/Admin/js/ridics.project.bundle.js"></script>
+    <script asp-append-version="true" src="~/Areas/Admin/js/chapter-editor/ridics.project.chapter-editor.bundle.js"></script>
     <script asp-append-version="true" src="~/Areas/Admin/js/editors-common-base/ridics.project.editors.bundle.js"></script>
     <script asp-append-version="true" src="~/Areas/Admin/js/text-editor/ridics.project.text-editor.bundle.js"></script>
     <script asp-append-version="true" src="~/Areas/Admin/js/page-image-viewer/ridics.project.page-image-viewer.bundle.js"></script>
