--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -68,7 +68,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-12">
-                                <label for="new-resource-comment">@Localization.Translate("FirstVersionComment", "RidicsProject")</label>
+                                <label for="new-resource-comment">@Localization.Translate("Comment", "RidicsProject")</label>
                                 <textarea class="form-control" id="new-image-resource-comment" maxlength="@Projects.MaxResourceCommentLength"></textarea>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="modal-footer">
                     <div class="dialog-error alert alert-danger true-inline-alert">
-                        @Localization.Translate("SaveError", "RidicsProject")
+                        SAVE ERROR @*@Localization.Translate("SaveError", "RidicsProject")*@
                     </div>
                     <button type="button" class="btn btn-default" data-dismiss="modal">
                         @Localization.Translate("Cancel", "Admin")
