Update Dropzone, keep old styles

--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <link asp-append-version="true" rel="icon" type="image/png" href="@Url.Content(PortalConfig.Value.FaviconPath)">
     <title>@PortalConfig.Value.MainPortal.PortalNameFull - @ViewBag.Title</title>
     <link asp-append-version="true" href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link asp-append-version="true" href="~/lib/dropzone/downloads/css/dropzone.css" rel="stylesheet" />
+    <link asp-append-version="true" href="~/lib-custom/dropzone.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/lib/jquery-ui-dist/jquery-ui.min.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/lib/jquery-eu-cookie-law-popup/css/jquery-eu-cookie-law-popup.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/lib/simplemde-custom-markdown-mode/dist/simplemde.min.css" rel="stylesheet" />
@@ -96,7 +96,7 @@
         <script asp-append-version="true" src="~/lib/bootstrap-colorpicker-plus/dist/js/bootstrap-colorpicker-plus.js"></script>
         <script asp-append-version="true" src="~/lib/s-pagination/dist/pagination.js"></script>
         <script asp-append-version="true" src="~/lib/bootbox/bootbox.js"></script>
-        <script asp-append-version="true" src="~/lib/dropzone/downloads/dropzone.js"></script>
+        <script asp-append-version="true" src="~/lib/dropzone/dist/dropzone.js"></script>
         <script asp-append-version="true" src="~/lib/he/he.js"></script>
         <script asp-append-version="true" src="~/lib/urijs/src/URI.min.js"></script>
         @*<script asp-append-version="true" src="~/lib/modernizr/modernizr.js"></script>*@
