--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -60,6 +60,9 @@
                         <div class="form-group">
                             <div class="col-md-12">
                                 <form action="@Url.Action("UploadResource", "Project")" method="post" class="dropzone" enctype="multipart/form-data" id="new-image-upload">
+                                    <div class="fallback">
+                                        <input name="file" type="file" />
+                                    </div>
                                     <div class="hidden">
                                         <input type="hidden" id="new-image-page-id" name="pageId" />
                                         <input type="hidden" id="new-image-image-id" name="imageId" />
