dictionaries listing loading fixed + quicker compared to previous version; adding loading-visualization to tsconfig

--- a/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Shared/_Layout.cshtml
@@ -108,6 +108,13 @@
         <script asp-append-version="true" src="~/js/Plugins/itjakub.plugins.bundle.js"></script>
         <script asp-append-version="true" src="~/js/Favorite/itjakub.favorite.bundle.js"></script>
         <script asp-append-version="true" src="~/lib/loading-visualization/dist/main.js"></script>
+        <script>
+            $(document).ready(function() {
+                var loader = new lv();
+                loader.initLoaderAll();
+                loader.startObserving();
+            });
+        </script>
 
         @RenderSection("scripts", false)
 
