--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Home.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Home.less
@@ -70,6 +70,13 @@
     margin-top: -30px;
 }
 
+.no-messages {
+    font-size: 18px;
+    text-align: center;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+}
+
 .news .message {
     margin: 2em;
     margin-bottom: 2em;
