--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -74,41 +74,7 @@
 </div>
 
 
-<div class="modal fade" role="dialog" id="new-resource-dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">@Localizer.Translate("NewFiles", "Admin")</h4>
-            </div>
-            <div class="modal-body">
-                <div class="form-horizontal">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <form action="@Url.Action("UploadResource", "Project")" method="post" class="dropzone" enctype="multipart/form-data" id="new-resource-upload">
-                                <div class="hidden">
-                                    <input type="hidden" id="new-resource-session-id" name="sessionId" value="0" />
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <label for="new-resource-comment">@Localizer.Translate("FirstVersionComment", "Admin")</label>
-                            <textarea class="form-control" id="new-resource-comment" maxlength="@Projects.MaxResourceCommentLength"></textarea>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <div class="dialog-error alert alert-danger true-inline-alert">@Localizer.Translate("ErrorDuringSave", "Admin")</div>
-                <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Cancel", "Admin")</button>
-                <button type="button" class="btn btn-default save-button"><span class="saving-icon loading-small-button"></span>@Localizer.Translate("Done", "Admin")</button>
-            </div>
-        </div>
-    </div>
-</div>
-
+@*TODO remove this function:*@
 <div class="modal fade" role="dialog" id="rename-resource-dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -141,6 +107,7 @@
     </div>
 </div>
 
+@*TODO remove this function:*@
 <div class="modal fade" role="dialog" id="delete-resource-dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -160,6 +127,7 @@
     </div>
 </div>
 
+@*TODO remove this function:*@
 <div class="modal fade" role="dialog" id="duplicate-resource-dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -174,41 +142,6 @@
                 <div class="dialog-error alert alert-danger true-inline-alert">@Localizer.Translate("ErrorDuringDuplicate", "Admin")</div>
                 <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Cancel", "Admin")</button>
                 <button type="button" class="btn btn-default save-button"><span class="saving-icon loading-small-button"></span>@Localizer.Translate("Duplicate", "Admin")</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" role="dialog" id="new-resource-version-dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">@Localizer.Translate("ResourceNewVersion", "Admin")<span id="new-resource-version-original"></span></h4>
-            </div>
-            <div class="modal-body">
-                <div class="form-horizontal">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <form action="@Url.Action("UploadNewResourceVersion", "Project")" method="post" class="dropzone" enctype="multipart/form-data" id="new-resource-version-upload">
-                                <div class="hidden">
-                                    <input type="hidden" id="new-resource-version-session-id" name="sessionId" value="0" />
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <label for="new-resource-comment">@Localizer.Translate("NewVersionComment", "Admin")</label>
-                            <textarea class="form-control" id="new-resource-version-comment" maxlength="@Projects.MaxResourceCommentLength"></textarea>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <div class="dialog-error alert alert-danger true-inline-alert">@Localizer.Translate("ErrorDuringSave", "Admin")</div>
-                <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Cancel", "Admin")</button>
-                <button type="button" class="btn btn-default save-button"><span class="saving-icon loading-small-button"></span>@Localizer.Translate("Save", "Admin")</button>
             </div>
         </div>
     </div>
