--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1587,3 +1587,18 @@ table {
         }
     }
 }
+
+.dropzone-in-modal {
+    min-height: 250px;
+    
+    .dz-default.dz-message {
+        background-image: none;
+
+        span {
+            display: block;
+            font-style: italic;
+            position: absolute;
+            top: 45%;
+        }
+    }
+}
