Fix label in Dropzone

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1599,6 +1599,7 @@ table {
             font-style: italic;
             position: absolute;
             top: 45%;
+            text-align: center;
         }
     }
 }
