--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -11,6 +11,7 @@
 @section styles {
     <link asp-append-version="true" rel="stylesheet" href="~/Areas/Admin/css/ridics.project.css" />
     <link asp-append-version="true" rel="stylesheet" href="~/css/ridics.list.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/lib/bootstrap-select/dist/css/bootstrap-select.css" />
     <link asp-append-version="true" rel="stylesheet" href="~/lib/bootstrap-tokenfield/dist/css/bootstrap-tokenfield.css" />
     <link asp-append-version="true" rel="stylesheet" href="~/lib/gijgo/dist/modular/css/checkbox.min.css" />
     <link asp-append-version="true" rel="stylesheet" href="~/lib/gijgo/dist/modular/css/core.min.css" />
@@ -26,6 +27,7 @@
     <script asp-append-version="true" src="~/js/itjakub.simplemde.tools.js"></script>
     <script asp-append-version="true" src="~/js/ridics.text-api-client.js"></script>
     <script asp-append-version="true" src="~/Areas/Admin/js/edition-note/ridics.project.edition-note.main.js"></script>
+    <script asp-append-version="true" src="~/lib/bootstrap-select/dist/js/bootstrap-select.js"></script>
     <script asp-append-version="true" src="~/lib/bootstrap-tokenfield/dist/bootstrap-tokenfield.js"></script>
     <script asp-append-version="true" src="~/lib/gijgo/dist/modular/js/core.min.js"></script>
     <script asp-append-version="true" src="~/lib/gijgo/dist/modular/js/checkbox.min.js"></script>
