--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -1,5 +1,6 @@
-﻿@using Scalesoft.Localization.AspNetCore
-@model IList<Vokabular.MainService.DataContracts.Contracts.ChapterHierarchyContract>
+﻿@using ITJakub.Web.Hub.Areas.Admin.Models
+@using Scalesoft.Localization.AspNetCore
+@model ITJakub.Web.Hub.Areas.Admin.Models.ChapterEditorViewModel
 @inject ILocalizationService Localizer
 
 <div class="project-chapter-list">
@@ -15,7 +16,7 @@
             </div>
         </div>
 
-        <div class="col-xs-12 col-md-6 col-lg-6">
+        <div class="col-xs-12 col-md-7">
             <div class="panel panel-default chapters">
                 <div class="panel-heading">
                     <div class="row">
@@ -36,9 +37,12 @@
                                 <div class="sub-chapters">
                                     @{
                                         ViewData.Add("levelOfHierarchy", 0);
-                                        foreach (var chapter in Model)
+                                        foreach (var chapter in Model.Chapters)
                                         {
-                                            @await Html.PartialAsync("Work/SubView/_ChapterRow", chapter, ViewData)
+                                            @await Html.PartialAsync("Work/SubView/_ChapterRow", new ChapterEditorRowViewModel{
+                                                Chapter = chapter,
+                                                Pages = Model.Pages
+                                            }, ViewData)
                                         }
                                     }
                                 </div>
@@ -53,7 +57,7 @@
                             <span class="glyphicon glyphicon-arrow-right"></span>
                         </button>
                         <label for="chapterMoveDistance">@Localizer.Translate("Shift", "RidicsProject")</label>
-                        <input type="number" id="chapterMoveDistance" class="chapter-move-distance form-control" value="1" min="1" max="@Model.Count"/>
+                        <input type="number" id="chapterMoveDistance" class="chapter-move-distance form-control" value="1" min="1" max="@Model.Chapters.Count"/>
                         <button type="button" class="btn btn-default move-chapter-up" title="@Localizer.Translate("ShiftChapterUp", "RidicsProject")">
                             <span class="glyphicon glyphicon-arrow-up"></span>
                         </button>
@@ -64,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <div id="page-detail" class="hide col-xs-12 col-md-6 col-lg-6">
+        <div id="page-detail" class="hide col-xs-12 col-md-5">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="panel-title">
@@ -136,6 +140,45 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "Admin")</button>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="chapter-template">
+    <div class="chapter-container">
+        <div class="chapter-row">
+            <div class="ridics-checkbox">
+                <label>
+                    <input type="checkbox" class="selection-checkbox" />
+                    <span class="cr cr-black">
+                        <i class="cr-icon glyphicon glyphicon-ok"></i>
+                    </span>
+                </label>
+            </div>
+            <div class="name">
+                <div>
+                    <input type="text" name="chapter-name" class="form-control hide"/>
+                    <span class="chapter-name"></span>
+                </div>
+                <div class="alert alert-danger"></div>
+            </div>
+            <div class="buttons">
+                <span class="page-name"></span>
+                <select name="chapter-page" class="form-control select-page selectpicker hide">
+                    @foreach (var pageItem in Model.Pages)
+                    {
+                    <option value="@pageItem.Id">@pageItem.Name</option>
+                    }
+                </select>
+                <a class="edit-chapter btn btn-sm btn-default" title="@Localizer.Translate("EditChapterName", "RidicsProject")">
+                    <i class="fa fa-pencil"></i>
+                </a>
+                <a class="remove-chapter btn btn-sm btn-default" title="@Localizer.Translate("DeleteChapter", "RidicsProject")">
+                    <i class="fa fa-trash"></i>
+                </a>
+            </div>
+        </div>
+        <div class="sub-chapters">
         </div>
     </div>
 </div>
