--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1430,6 +1430,12 @@ table {
     }
 }
 
+.select-page.bootstrap-select {
+    .active a {
+        background-color: @button-background-color;
+    }
+}
+
 .chapter-listing {
     height: 400px;
     overflow-y: auto;
@@ -1467,10 +1473,6 @@ table {
                 width: 6em;
                 height: 32px;
                 display: inline-block;
-
-                .active a {
-                    background-color: @button-background-color;
-                }
             }
 
             a.btn-default {
