Chapter editor - refactoring, save chapters

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_ChapterEditor.cshtml
@@ -96,9 +96,9 @@
     </div>
 </div>
 
-<div class="modal fade project-chapters-dialog" role="dialog" id="project-chapters-dialog">
+<div class="modal fade" role="dialog" id="projectChaptersDialog">
     <div class="modal-dialog">
-        <div class="modal-content chapter-list-editor-content">
+        <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">@Localizer.Translate("NewChapter", "Admin")</h4>
@@ -148,7 +148,7 @@
     </div>
 </div>
 
-<div class="chapter-template hide">
+<div id="chapterTemplate" class="hide">
     <div class="chapter-container">
         <div class="chapter-row">
             <div class="ridics-checkbox">
