--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/_PublicationsNewResources.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/_PublicationsNewResources.cshtml
@@ -1,11 +1,14 @@
 ﻿@using ITJakub.Web.Hub.Areas.Admin.Models.Constants
+@using ITJakub.Web.Hub.Helpers
 @using Scalesoft.Localization.AspNetCore
 @model ITJakub.Web.Hub.Areas.Admin.Models.NewPublicationViewModel
 @inject ILocalizationService Localizer
+@inject ResourceTypeLocalizer ResourceTypeLocalizer
 
 @{
     var actualResourceTypeIndex = (int)ViewData[PublicationViewConstants.ActualResourceType];
 }
+
 <input type="hidden" asp-for="@Model.ResourceTypes[actualResourceTypeIndex].ResourceType" />
 <div class="panel panel-default publish-resource-panel" data-resource-type="@Html.Raw((int) Model.ResourceTypes[actualResourceTypeIndex].ResourceType)">
     <div class="panel-heading">
@@ -33,6 +36,7 @@
                     </div>
                 </th>
                 <th>@Localizer.Translate("Source", "Admin")</th>
+                <th>@ResourceTypeLocalizer.TranslateRelatedResourceTypeFor(Model.ResourceTypes[actualResourceTypeIndex].ResourceType)</th>
                 <th class="version-label">@Localizer.Translate("Version", "Admin")</th>
                 <th>@Localizer.Translate("Created", "Admin")</th>
                 <th>@Localizer.Translate("Author", "Admin")</th>
@@ -58,6 +62,9 @@
                     </td>
                     <td class="name">
                         @Model.ResourceTypes[actualResourceTypeIndex].ResourceList[i].Name
+                    </td>
+                    <td>
+                        @Model.ResourceTypes[actualResourceTypeIndex].ResourceList[i].RelatedResourceName
                     </td>
                     <td>
                         <select asp-for="@Model.ResourceTypes[actualResourceTypeIndex].ResourceList[i].ResourceVersionId" class="selectpicker select-version" data-loaded="false">
