--- a/UJCSystem/ITJakub.Web.Hub/Areas/RepositoryImport/Views/RepositoryImport/ImportStatus.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/RepositoryImport/Views/RepositoryImport/ImportStatus.cshtml
@@ -31,10 +31,8 @@
                         <h3>@repository.Name</h3>
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="progress">
-                                    <div id="repository-@repository.Id" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" style="width: 0; min-width: 2em;">
-                                        0%
-                                    </div>
+                                <div id="progress_bar">
+                                    <!-- place where loading bar is inserted from javascript -->
                                 </div>
                             </div>
                         </div>
