Use better color for selected row, fill value to empty parentheses in editor dialog

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Metadata.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Metadata.cshtml
@@ -421,7 +421,7 @@
                                                             <select size="1" class="form-control" id="add-editor-type">
                                                                 @foreach (var responsibleType in Model.AllResponsibleTypeList)
                                                                 {
-                                                                    <option value="@responsibleType.Id" @(Model.AllResponsibleTypeList.IndexOf(responsibleType) == 0 ? "selected" : null)>@responsibleType.Text (@responsibleType.Type.GetDisplayAttributeValue())</option>
+                                                                    <option value="@responsibleType.Id">@responsibleType.Text (@responsibleType.Type.GetDisplayAttributeValue())</option>
                                                                 }
                                                             </select>
                                                         </div>
