--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -8,7 +8,7 @@
 @box-border: 1px solid #ddd;
 @even-table-row-colour: #eee;
 @odd-table-row-colour: white;
-@selected-row-color: #dcdcdc;
+@selected-row-color: #FFDAB9;
 
 .project-list {
     hr {
