--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Metadata.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Metadata.cshtml
@@ -57,35 +57,30 @@
                                 <div class="col-md-8">
                                     <div id="work-metadata-editors">
                                         <input type="hidden" id="add-editor-id-preview" />
-                                        @if (Model.ResponsiblePersons.Count == 0)
+                                        <div class="control-label" id="no-responsible-person-info" style="@(Model.ResponsiblePersons.Count > 0 ? "display: none" : string.Empty)">
+                                            @Localizer.Translate("NoResponsiblePeople", "Admin")
+                                        </div>
+
+                                        @foreach (var editor in Model.ResponsiblePersons)
                                         {
-                                            <div class="control-label">
-                                                @Localizer.Translate("NoResponsiblePeople", "Admin")
-                                            </div>
-                                        }
-                                        else
-                                        {
-                                            @foreach (var editor in Model.ResponsiblePersons)
-                                            {
-                                                <div class="editor-item" data-id="@editor.Id" data-responsible-type-id="@editor.ResponsibleType.Id">
-                                                    <span class="person-list-manipulate">
-                                                        <span class="btn-group-vertical move-button">
-                                                            <button type="button" class="btn btn-default move-person-up">
-                                                                <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                                                            </button>
-                                                            <button type="button" class="btn btn-default move-person-down">
-                                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                                            </button>
-                                                        </span>
-                                                        <button class="btn btn-default remove-button" title="@Localizer.Translate("Delete", "Admin")">
-                                                            <span class="glyphicon glyphicon-remove"></span>
+                                            <div class="editor-item" data-id="@editor.Id" data-responsible-type-id="@editor.ResponsibleType.Id">
+                                                <span class="person-list-manipulate">
+                                                    <span class="btn-group-vertical move-button">
+                                                        <button type="button" class="btn btn-default move-person-up">
+                                                            <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                                                        </button>
+                                                        <button type="button" class="btn btn-default move-person-down">
+                                                            <i class="fa fa-chevron-down" aria-hidden="true"></i>
                                                         </button>
                                                     </span>
-                                                    <span class="text-as-form-control">
-                                                        <span class="person-name">@editor.FirstName</span><span class="person-surname">@editor.LastName - @editor.ResponsibleType.Text</span>
-                                                    </span>
-                                                </div>
-                                            }
+                                                    <button class="btn btn-default remove-button" title="@Localizer.Translate("Delete", "Admin")">
+                                                        <span class="glyphicon glyphicon-remove"></span>
+                                                    </button>
+                                                </span>
+                                                <span class="text-as-form-control">
+                                                    <span class="person-name">@editor.FirstName</span><span class="person-surname">@editor.LastName - @editor.ResponsibleType.Text</span>
+                                                </span>
+                                            </div>
                                         }
                                     </div>
 
@@ -154,35 +149,30 @@
                                 <div class="col-md-8">
                                     <div id="work-metadata-authors">
                                         <input type="hidden" id="add-author-id-preview" />
-                                        @if (Model.Authors.Count == 0)
+                                        <div class="control-label" id="no-author-info" style="@(Model.Authors.Count > 0 ? "display: none" : string.Empty)">
+                                            @Localizer.Translate("NoAuthors", "Admin")
+                                        </div>
+
+                                        @foreach (var author in Model.Authors)
                                         {
-                                            <div class="control-label">
-                                                @Localizer.Translate("NoAuthors", "Admin")
-                                            </div>
-                                        }
-                                        else
-                                        {
-                                            @foreach (var author in Model.Authors)
-                                            {
-                                                <div class="author-item" data-id="@author.Id">
-                                                    <span class="person-list-manipulate">
-                                                        <span class="btn-group-vertical move-button">
-                                                            <button type="button" class="btn btn-default move-person-up">
-                                                                <i class="fa fa-chevron-up" aria-hidden="true"></i>
-                                                            </button>
-                                                            <button type="button" class="btn btn-default move-person-down">
-                                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                                                            </button>
-                                                        </span>
-                                                        <button class="btn btn-default remove-button" title="@Localizer.Translate("Delete", "Admin")">
-                                                            <span class="glyphicon glyphicon-remove"></span>
+                                            <div class="author-item" data-id="@author.Id">
+                                                <span class="person-list-manipulate">
+                                                    <span class="btn-group-vertical move-button">
+                                                        <button type="button" class="btn btn-default move-person-up">
+                                                            <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                                                        </button>
+                                                        <button type="button" class="btn btn-default move-person-down">
+                                                            <i class="fa fa-chevron-down" aria-hidden="true"></i>
                                                         </button>
                                                     </span>
-                                                    <span class="text-as-form-control">
-                                                        <span class="person-name">@author.FirstName</span><span class="person-surname">@author.LastName</span>
-                                                    </span>
-                                                </div>
-                                            }
+                                                    <button class="btn btn-default remove-button" title="@Localizer.Translate("Delete", "Admin")">
+                                                        <span class="glyphicon glyphicon-remove"></span>
+                                                    </button>
+                                                </span>
+                                                <span class="text-as-form-control">
+                                                    <span class="person-name">@author.FirstName</span><span class="person-surname">@author.LastName</span>
+                                                </span>
+                                            </div>
                                         }
                                     </div>
 
