--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
@@ -25,7 +25,7 @@
         <div class="col-xs-2">
             <div class="checkbox">
                 <label class="checkbox-inline">
-                    <input type="checkbox" value="" class="display-page-checkbox">
+                    <input type="checkbox" class="display-page-checkbox" checked="checked">
                     @Localization.Translate("DisplayPageNumbers", "RidicsProject")
                 </label>
             </div>
