--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1462,6 +1462,8 @@ table {
 
         .name {
             padding-left: 0;
+            width: 100%;
+            max-width: 50%;
 
             input,
             & > div {
@@ -1499,6 +1501,104 @@ table {
 
         .alert:empty {
             display: none;
+        }
+    }
+}
+
+.page-navigation {
+    margin: 0 auto;
+
+    .page-navigation-container-helper {
+        clear: both;
+        padding: 1rem 0 .5rem;
+    }
+
+    ul {
+        display: inline;
+
+        &.page-navigation-container {
+            &.page-navigation-container-right {
+                padding: 0;
+            }
+
+            &.page-navigation-container-left {
+                padding: 0;
+            }
+
+            > li {
+                display: inline-block;
+                padding: .3rem .1rem;
+                margin: 0 .3rem;
+                -webkit-user-select: none;
+                -khtml-user-select: none;
+                -moz-user-select: none;
+                -o-user-select: none;
+                user-select: none;
+
+                > a {
+                    font-weight: bold;
+                    color: @button-background-color;
+                }
+
+                > a:hover {
+                    color: @button-hover-background-color;
+                    text-decoration: none;
+                    opacity: 1;
+                }
+            }
+
+            > li:first-of-type {
+                padding-left: 0;
+                margin-left: 0;
+            }
+
+            > li:last-of-type {
+                padding-right: 0;
+                margin-right: 0;
+            }
+        }
+
+        &.pagination {
+            margin-top: 0;
+            margin-bottom: 0;
+            margin: 0 0.7rem;
+
+            > li {
+                padding: 0;
+                -webkit-user-select: none;
+                -khtml-user-select: none;
+                -moz-user-select: none;
+                -o-user-select: none;
+                user-select: none;
+
+                .page-navigation {
+                    padding: 5px;
+                    width: 20px;
+                }
+
+                > a {
+                    font-size: 14px;
+                    border: none;
+                    float: none;
+                    padding: 5px 0.5em;
+
+                    &:hover {
+                        background: none;
+                    }
+                }
+
+                &.page-navigation > a {
+                    font-weight: bold;
+                    padding-left: 2px;
+                    padding-right: 2px;
+                }
+
+                &.page-active > a {
+                    font-weight: bold;
+                    font-size: 15px;
+                    color: @menu-background-color;
+                }
+            }
         }
     }
 }
