--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1620,6 +1620,10 @@ table {
         flex: 1 0 45%;
         text-align: center;
     }
+
+    .sub-content {
+        width: 100%;
+    }
 }
 
 .chapter-move-distance,
