--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
@@ -14,6 +14,7 @@
                 </div>
             </div>
         </div>
+        <div class="col-xs-12 save-alert-holder"></div>
 
         <div class="col-xs-12 col-md-6 col-lg-5">
             <div class="panel panel-default pages">
