Fix opening dialog for creating new user group

--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/_CreateRole.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/_CreateRole.cshtml
@@ -14,7 +14,7 @@
     </div>
     <div class="modal-body">
 
-        <div asp-validation-summary="All" class="alert alert-danger"></div>
+        <div asp-validation-summary="All" class="alert alert-danger error-container"></div>
         @if (Model.SuccessfulUpdate)
         {
             <div class="alert alert-success" role="alert">
