--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/ProjectPermission.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/ProjectPermission.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Scalesoft.Localization.AspNetCore
 @using Scalesoft.Localization.Core.Util
+@using Vokabular.MainService.DataContracts.Contracts.Permission
 @model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<Vokabular.MainService.DataContracts.Contracts.ProjectDetailContract>
 @inject ILocalizationService Localizer
 
@@ -10,6 +11,7 @@
 @section styles{
     <link asp-append-version="true" href="~/css/ridics.list.css" rel="stylesheet" />
     <link asp-append-version="true" href="~/css/ridics.permissions.css" rel="stylesheet" />
+    <link asp-append-version="true" href="~/css/ridics.checkbox.css" rel="stylesheet" />
 }
 
 @section scripts{
@@ -87,6 +89,7 @@
             </div>
         </div>
     </div>
+    @await Html.PartialAsync("Widget/_ProjectPermissionsPanel")
 </div>
 
 <div id="addProjectPermissionToRoleDialog" class="modal fade" role="dialog">
@@ -110,6 +113,9 @@
                         <div class="detail-item top-separation-line">
                             <span class="detail-item-title">@Localizer.Translate("SelectedGroup", "Permission", LocTranslationSource.File): </span>
                             <span id="selectedRole">@Localizer.Translate("RoleIsNotSelected", "PermissionJs")</span>
+                        </div>
+                        <div class="detail-item top-separation-line">
+                            @await Html.PartialAsync("Widget/_ProjectPermissionsWidget", new PermissionDataContract())
                         </div>
                     </div>
                     <div id="addProjectToRoleError"></div>
