--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.checkbox.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.checkbox.less
@@ -7,6 +7,11 @@
             display: table;
             clear: both;
         }
+
+        .checkbox-label {
+            padding-left: 0.5em;
+            font-weight: normal;
+        }
     }
 
     .cr {
