Project permissions - view improvements

--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/ProjectPermission.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/ProjectPermission.cshtml
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="panel-body">
-                    <div id="roleListContainer" class="list-container"></div>
+                    <div id="roleListContainer" class="list-container selectable"></div>
                     <div id="rolePagination" class="text-center"></div>
                 </div>
             </div>
