--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ridics.permissions.less
@@ -108,7 +108,8 @@
 .user-section,
 .role-section,
 .permission-section,
-.project-section {
+.project-section,
+.project-permission-section {
     margin: 1.5em 0;
 
     .panel {
