Project permissions - saving, pagination

--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_ProjectPermissionsPanel.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_ProjectPermissionsPanel.cshtml
@@ -12,6 +12,9 @@
                 </div>
             </div>
             <div class="panel-body">
+                <div class="alert-holder"></div>
+                <div class="sub-content"></div>
+                <button id="saveProjectPermissions" type="button" class="btn btn-default">@Localizer.Translate("Save", "Permission")</button>
             </div>
         </div>
     </div>
