--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PageListDetail.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PageListDetail.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Scalesoft.Localization.AspNetCore
-@model ITJakub.Web.Hub.Areas.Admin.Models.PageDetailViewModel
+@model ITJakub.Web.Hub.Areas.Admin.Models.PageContentViewModel
 @inject ILocalizationService Localizer
 
 @if (!string.IsNullOrEmpty(Model.Text) || Model.HasImage)
