--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/RepositoryImport/css/ridics.repositoryImport.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/RepositoryImport/css/ridics.repositoryImport.less
@@ -5,6 +5,8 @@
 @even-table-row-colour: #eee;
 @odd-table-row-colour: #white;
 @border-color: #E5E5E5;
+@cancel-import-color: #d9534f;
+@success-import-color: #5cb85c;
 
 .row.display-flex {
     display: flex;
@@ -332,7 +334,7 @@ table {
     }
 }
 
-.preloading-pages-spinner {
+.preimporting-pages-spinner {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -350,4 +352,36 @@ table {
 
 .float-none {
     float: none;
+}
+
+.cancel_import {
+    border-color: @cancel-import-color;
+
+    div:nth-child(1) {
+        background-color: @cancel-import-color;
+    }
+
+    div:nth-child(2) {
+        color: @cancel-import-color;
+    }
+
+    &[data-label]:after {
+        color: @cancel-import-color;
+    }
+}
+
+.success_import {
+    border-color: @success-import-color;
+
+    div:nth-child(1) {
+        background-color: @success-import-color;
+    }
+
+    div:nth-child(2) {
+        color: @success-import-color;
+    }
+
+    &[data-label]:after {
+        color: @success-import-color;
+    }
 }
